src/objects/Application_Section__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Reciprocity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Reciprocity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this for license reinstatement?</description>
        <label>License Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to the license renewal?</description>
        <label>License Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a license?</description>
        <label>License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number of the section</description>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <description>Master of the section</description>
        <label>Parent</label>
        <referenceTo>Application_Page__c</referenceTo>
        <relationshipLabel>Application Sections</relationshipLabel>
        <relationshipName>Application_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Permit_Reinstatement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this for permit reinstatement?</description>
        <label>Permit Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a permit renewal?</description>
        <label>Permit Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this related to a permit?</description>
        <label>Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Request</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sections Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>